[package]
name = "snapxrust"
version = "0.2.3"
edition = "2021"
build = "build.rs"

[dependencies]
xcap = "0.8.2"
uniffi = { version = "0.29.4", features = [ "build" ] }
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.149"

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }
uniffi_build = "0.31.0"
uniffi_bindgen = "0.29.4"
camino = "1.2.2"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[bindings.csharp]
cdylib_name = "snapxrust"
